--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "lucide-react": "^0.507.0",
     "@intentui/icons": "^1.10.33",
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
