camel studio into project

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,24 +9,39 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "lucide-react": "^0.507.0",
+    "dagre": "0.8.5",
+    "@monaco-editor/react": "4.7.0",
+    "@rjsf/core": "5.24.8",
+    "@rjsf/utils": "5.24.8",
+    "@rjsf/validator-ajv8": "5.24.8",
     "@intentui/icons": "^1.10.33",
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
+    "@xyflow/react": "^12.6.0",
+    "axios": "^1.9.0",
+    "dot-prop-immutable": "^2.1.1",
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
     "i18next-fetch-backend": "^6.0.0",
     "isbot": "^5.1.17",
+    "js-base64": "^3.7.7",
+    "lucide-react": "^0.507.0",
+    "motion": "^12.10.0",
     "react": "^19.0.0",
     "react-aria-components": "^1.8.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-router": "^7.5.1",
+    "react-stately": "^3.37.0",
     "remix-i18next": "^7.2.0",
     "remix-themes": "^2.0.4",
-    "tailwindcss-react-aria-components": "^2.0.0"
+    "tailwindcss-react-aria-components": "^2.0.0",
+    "uuid": "^11.1.0",
+    "yaml": "^2.7.1",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@types/dagre": "0.7.52",
     "@react-router/dev": "^7.5.1",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^20",
