--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "dev": "react-router dev --port 3000",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "dagre": "0.8.5",
+    "@intentui/icons": "^1.10.33",
     "@monaco-editor/react": "4.7.0",
+    "@react-router/node": "^7.5.1",
+    "@react-router/serve": "^7.5.1",
     "@rjsf/core": "5.24.8",
     "@rjsf/utils": "5.24.8",
     "@rjsf/validator-ajv8": "5.24.8",
-    "@intentui/icons": "^1.10.33",
-    "@react-router/node": "^7.5.1",
-    "@react-router/serve": "^7.5.1",
+    "@supabase/auth-helpers-remix": "0.4.0",
+    "@supabase/supabase-js": "^2.26.0",
     "@xyflow/react": "^12.6.0",
     "axios": "^1.9.0",
+    "dagre": "0.8.5",
     "dot-prop-immutable": "^2.1.1",
     "isbot": "^5.1.17",
     "js-base64": "^3.7.7",
@@ -36,9 +38,9 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@types/dagre": "0.7.52",
     "@react-router/dev": "^7.5.1",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/dagre": "0.7.52",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
