--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "@vercel/react-router": "^1.2.2",
     "@react-router/dev": "^7.6.3",
     "@tailwindcss/vite": "^4.0.0",
     "@types/dagre": "0.7.52",
