--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@intentui/icons": "^1.10.33",
+    "@intentui/icons": "^1.11.0",
     "@monaco-editor/react": "4.7.0",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "@supabase/auth-helpers-remix": "0.4.0",
@@ -19,36 +20,34 @@
     "axios": "^1.9.0",
     "dagre": "0.8.5",
     "dot-prop-immutable": "^2.1.1",
-    "isbot": "^5.1.17",
+    "isbot": "^5.1.27",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.507.0",
     "motion": "^12.10.0",
-    "react": "^19.0.0",
-    "react-aria-components": "^1.8.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-aria-components": "^1.11.0",
+    "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
     "react-stately": "^3.37.0",
     "remix-themes": "^2.0.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "tailwindcss-react-aria-components": "^2.0.0",
+    "tw-animate-css": "^1.3.6",
     "uuid": "^11.1.0",
     "yaml": "^2.7.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@vercel/react-router": "^1.2.2",
     "@react-router/dev": "^7.7.1",
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/dagre": "0.7.52",
     "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^3.2.0",
-    "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^4.0.0",
-    "tw-animate-css": "^1.2.5",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
