--- a/components.json
+++ b/components.json
@@ -11,11 +11,10 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "components",
-    "utils": "components/lib/utils",
-    "ui": "components/ui",
-    "lib": "components/lib",
-    "hooks": "hooks"
+    "components": "app/components",
+    "utils": "app/app/components/lib/utils",
+    "ui": "app/app/components/ui",
+    "lib": "app/app/components/lib"
   },
   "iconLibrary": "lucide"
 }
