--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "camelion",
+  "name": "cameleon",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
