updating env config

--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "tasks": {
     "build": {
       "outputs": ["build/**"],
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "env": ["SUPABASE_URL", "SUPABASE_ANON_KEY"]
     },
     "dev": {
       "cache": false,
